feat(auth): register users
