# src/routes/auth.ts
@@ -1,22 +1,61 @@
 import { users } from '@/db/schema.js';
 import { TokenSet } from '@/dtos/token-set.js';
 import { UserDto } from '@/dtos/user.js';
+import { LoginFormSchema, RegisterFormSchema } from '@/schemas/auth.schema.js';
 import { FastifyTypebox } from '@/types/index.js';
-import { Type } from '@sinclair/typebox';
 import { plainToClass, plainToInstance } from 'class-transformer';
 import { eq } from 'drizzle-orm';
-import { FastifyPluginAsync } from 'fastify';
 
-const auth: FastifyPluginAsync = async (server: FastifyTypebox) => {
+const auth = async (server: FastifyTypebox) => {
+  server.post(
+    '/auth/register',
+    {
+      onRequest: [server.authenticate],
+      schema: {
+        body: RegisterFormSchema,
+      },
+    },
+    async function (request, reply) {
+      const input = request.body;
+
+      if (
+        await server.db.query.users.findFirst({
+          where: eq(users.email, input.email),
+        })
+      ) {
+        return reply.status(400).send({
+          error: 'email_already_exists',
+          message: 'An account with this email already exists.',
+          statusCode: 422,
+        });
+      }
+
+      const createUserResponse = await server.auth0.createUser(input);
+
+      const [newUser] = await server.db
+        .insert(users)
+        .values({
+          ...input,
+          // eslint-disable-next-line @typescript-eslint/ban-ts-comment
+          // @ts-ignore - the auth0 SDK contains `_id` instead of `id`
+          auth0Id: createUserResponse.data._id,
+        })
+        .returning();
+
+      return reply.status(createUserResponse.status).send({
+        data: plainToInstance(UserDto, newUser, {
+          excludeExtraneousValues: true,
+        }),
+      });
+    },
+  );
+
   server.post(
     '/auth/login',
     {
       onRequest: [server.authenticate],
       schema: {
-        body: Type.Object({
-          email: Type.String(),
-          password: Type.String(),
-        }),
+        body: LoginFormSchema,
       },
     },
     async function (request, reply) {
